DFC-133:Mobile: Portrait: 'Member Login' link overlaps Logo isshe has been fixed

--- a/sites/all/themes/custom/dfc/sass/components/_user-flopout.scss
+++ b/sites/all/themes/custom/dfc/sass/components/_user-flopout.scss
@@ -11,6 +11,9 @@ body.not-logged-in {
     position: absolute;
     top: 10px;
     right: 10px;
+	width: 37%;
+    text-align: right;
+
 	
     @include breakpoint($bp-desk) {
   		top: 40px;
